tests/ui/type/pattern_types/bad_pat.stderr
error[E0586]: inclusive range with no end
  --> $DIR/bad_pat.rs:6:43
   |
LL | type NonNullU32_2 = pattern_type!(u32 is 1..=);
   |                                           ^^^
   |
   = note: inclusive ranges must be bounded at the end (`..=b` or `a..=b`)
help: use `..` instead
   |
LL - type NonNullU32_2 = pattern_type!(u32 is 1..=);
LL + type NonNullU32_2 = pattern_type!(u32 is 1..);
   |

error[E0586]: inclusive range with no end
  --> $DIR/bad_pat.rs:8:40
   |
LL | type Positive2 = pattern_type!(i32 is 0..=);
   |                                        ^^^
   |
   = note: inclusive ranges must be bounded at the end (`..=b` or `a..=b`)
help: use `..` instead
   |
LL - type Positive2 = pattern_type!(i32 is 0..=);
LL + type Positive2 = pattern_type!(i32 is 0..);
   |

error: pattern not supported in pattern types
  --> $DIR/bad_pat.rs:10:33
   |
LL | type Wild = pattern_type!(() is _);
   |                                 ^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0586`.
